/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

// import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "Energinet.DataHub.MeteringPoints.Contracts";

message Address {
  string streetName = 1;
  string postCode = 2;
  string cityName = 3;
  string countryCode = 4;
  google.protobuf.BoolValue officialAddressIndicator = 5;
  string buildingNumber = 6;
  string streetCode = 7;
  string floorIdentification = 8;
  string roomIdentification = 9;
  string municipalityCode = 10;
  string cityNameSubDivision = 11;
  google.protobuf.StringValue geoInfoReference = 12;
}

message CreateMeteringPoint {
  string gsrnNumber = 1;
  string typeOfMeteringPoint = 2;
  string subTypeOfMeteringPoint = 3;
  string meterReadingOccurrence = 4;
  int32 maximumCurrent = 5;
  int32 maximumPower = 6;
  string meteringGridArea = 7;
  string powerPlant = 8;
  string locationDescription = 9;
  google.protobuf.StringValue parentRelatedMeteringPoint = 10;
  Address installationLocationAddress = 11;
  string settlementMethod = 12;
  string unitType = 13;
  string disconnectionType = 14;
  string occurenceDate = 15;
  string meterNumber = 16;
  string transactionId = 17;
  string physicalStatusOfMeteringPoint = 18;
  string netSettlementGroup = 19;
  string connectionType = 20;
  google.protobuf.StringValue assetType = 21;
  string fromGrid = 22;
  string toGrid = 23;
  string productType = 24;
  string measureUnitType = 25;
  google.protobuf.StringValue physicalConnectionCapacity = 26;
  google.protobuf.StringValue contractedConnectionCapacity = 27;
  google.protobuf.StringValue ratedCurrent = 28;
}

message ConnectMeteringPoint {
    string gsrnNumber = 1;
    string effectiveDate = 2;
    string transactionId = 3;
}

message MeteringPointEnvelope {
  oneof MeteringPointMessages {
    CreateMeteringPoint createMeteringPoint = 1;
    ConnectMeteringPoint connectMeteringPoint = 2;
  }
}
